@@ -107,7 +107,8 @@ static const struct default_hl_group_info default_groups_for_curses[] = {
     {HLG_COMMENT, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_YELLOW, COLOR_BLACK},
     {HLG_DIRECTIVE, SWIN_A_BOLD, SWIN_A_BOLD, COLOR_CYAN, COLOR_BLACK},
     {HLG_TEXT, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_WHITE, COLOR_BLACK},
-    {HLG_SEARCH, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_BLACK, COLOR_WHITE},
+    {HLG_INCSEARCH, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_BLACK, COLOR_WHITE},
+    {HLG_SEARCH, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_BLACK, COLOR_YELLOW},
     {HLG_STATUS_BAR, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_BLACK, COLOR_WHITE},
     {HLG_EXECUTING_LINE_ARROW, SWIN_A_BOLD, SWIN_A_BOLD, COLOR_GREEN, COLOR_BLACK},
     {HLG_SELECTED_LINE_ARROW, SWIN_A_BOLD, SWIN_A_BOLD, COLOR_WHITE, COLOR_BLACK},
@@ -137,7 +138,8 @@ static const struct default_hl_group_info default_groups_for_background_dark[]
     {HLG_COMMENT, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_YELLOW, -1},
     {HLG_DIRECTIVE, SWIN_A_BOLD, SWIN_A_BOLD, COLOR_CYAN, -1},
     {HLG_TEXT, SWIN_A_NORMAL, SWIN_A_NORMAL, -1, -1},
-    {HLG_SEARCH, SWIN_A_REVERSE, SWIN_A_REVERSE, -1, -1},
+    {HLG_INCSEARCH, SWIN_A_REVERSE, SWIN_A_REVERSE, -1, -1}, 
+    {HLG_SEARCH, SWIN_A_NORMAL, SWIN_A_NORMAL, COLOR_BLACK, COLOR_YELLOW},
     {HLG_STATUS_BAR, SWIN_A_REVERSE, SWIN_A_REVERSE, -1, -1},
     {HLG_EXECUTING_LINE_ARROW, SWIN_A_BOLD, SWIN_A_BOLD, COLOR_GREEN, -1},
     {HLG_SELECTED_LINE_ARROW, SWIN_A_BOLD, SWIN_A_BOLD, COLOR_WHITE, -1},
@@ -169,7 +171,8 @@ static struct hl_group_name hl_group_names[] = {
     {HLG_COMMENT, "Comment"},
     {HLG_DIRECTIVE, "PreProc"},
     {HLG_TEXT, "Normal"},
-    {HLG_SEARCH, "IncSearch"},
+    {HLG_INCSEARCH, "IncSearch"},
+    {HLG_SEARCH, "Search"},
     {HLG_STATUS_BAR, "StatusLine"},
     /* Legacy option that is now represented by ExecutingLineArrow */
     {HLG_EXECUTING_LINE_ARROW, "Arrow"},
